# personal-assistant-core

./: .env.example  .gitignore  Cargo.toml  Dockerfile  LICENSE  docker-compose.yaml
src/: config.rs  main.rs
src/common/: mod.rs  serialize_object_id.rs
src/config/: api.rs  mod.rs  mongo.rs
src/controllers/: app.rs  user.rs
src/domain/: app.rs  app_status.rs  mod.rs  user.rs
src/respositories/: user.rs
src/services/: mod.rs  user.rs
src/services/dto/: get_users_dto.rs  mod.rs
