[package]
name = "personal-assistant-core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
dotenvy = "0.15.7"
env_logger = "0.10.0"
envy = "0.4.2"
log = "0.4.20"
mongodb = "2.1.0"
serde = { version = "1.0", features = ["derive"] }
